unpackaged/main/default/objects/Accounting_Configuration__c/Accounting_Configuration__c.object-meta.xml
<CustomObject>
    <label>Accounting Configuration</label>
    <nameField>
        <label>Accounting Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>