unpackaged/main/default/objects/Accounting_Configuration__c/fields/Days_AR_Issue_Date_Remain_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_AR_Issue_Date_Remain_Open__c</fullName>
    <description>This is an integer that stores the number of business days AR Issued Dates will remain open for back dating into the previous month. Example: When set to 5, a user can set the an Issue Date to a date in the previous month until the 6th business day of the following month. At that time, Issue dates can no longer be set to the previous month.</description>
    <inlineHelpText>This is an integer that stores the number of business days AR Issued Dates will remain open for back dating into the previous month. Example: When set to 5, a user can set the an Issue Date to a date in the previous month until the 6th business day of the following month. At that time, Issue dates can no longer be set to the previous month.</inlineHelpText>
    <label>Days AR Issue Date Remain Open</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>