unpackaged/main/default/objects/Accounting_Configuration__c/fields/Last_Modified_By_Controller_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Controller_c__c</fullName>
    <label>Last Modified By Controller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>