unpackaged/main/default/objects/Accounting_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Days_AR_Issue_Date_Remain_Open__c</columns>
    <columns>Is_Active__c</columns>
    <columns>AP_Closed_Books_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>